k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: country-info-service
  namespace: country-info
  labels:
    app: country-info-service
spec:
  type: ClusterIP
  selector:
    app: country-info-service
  ports:
    - name: http
      port: 80
      targetPort: http
